# EnterpriseQA

./: .gitignore  README.md  docker-compose_example.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.vue  main.js
server/: .dockerignore  Dockerfile  config.example.py  config.py  database.py  main.py  pyproject.toml  rag_service.py  tasks.py
