[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "langchain",
    "langchain-chroma>=1.1.0",
    "langchain-community",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.2",
    "pypdf>=6.10.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "rank-bm25",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
    "langchain-classic",
]
